--- a/WebApiLearningAngular/Properties/launchSettings.json
+++ b/WebApiLearningAngular/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/WebApiEFCoreAngular",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:60911",
       "sslPort": 0
@@ -18,7 +22,10 @@
       }
     },
     "WebApiEFCoreAngular": {
-      "commandName": "IISExpress"
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "api/values",
+      "applicationUrl": "http://localhost:1430/"
     }
   }
 }
