--- a/WebApiLearningAngular/appsettings.json
+++ b/WebApiLearningAngular/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection":  "Server=(local)\\sqlexpress;Database=UserDetailsDB;Trusted_Connection=true;MultipleActiveResultSets=True;"
+    "DevConnection":  "Server=localhost;Database=UserDetailsDB;Trusted_Connection=true;MultipleActiveResultSets=True;"
   }
 }
